fix: update border-secondary color for improved contrast

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -50,7 +50,7 @@
   --bg-white: #000000;
 
   --border-primary: #565656ae;
-  --border-secondary: #dbdbdb;
+  --border-secondary: #00000010;
   --border-button: #0a0a0a21;
   --border-orbit: #00000029;
 
